--- a/build.xml
+++ b/build.xml
@@ -21,5 +21,7 @@
     <target name="run">
         <java jar="build/jar/game.jar" fork="true"/>
     </target>
-
+	
+	<target name="test">
+	</target>
 </project>
