made test ant target

--- a/build.xml
+++ b/build.xml
@@ -23,5 +23,8 @@
     </target>
 	
 	<target name="test">
+		<antcall target="clean"></antcall>
+		<antcall target="compile"></antcall>
+		<antcall target="jar"></antcall>
 	</target>
 </project>
