--- a/build.xml
+++ b/build.xml
@@ -5,8 +5,14 @@
     </target>
 
     <target name="compile">
-        <mkdir dir="build/classes"/>
-        <javac srcdir="src" destdir="build/classes"/>
+    	<mkdir dir="${classes.dir}"/>
+    	    <javac srcdir="${src.dir}" destdir="${classes.dir}">
+    	        <classpath>
+    	               <fileset dir="${lib}">
+    	                  <include name="**/*.jar" />
+    	               </fileset>
+    	         </classpath>
+    	    </javac>
     </target>
 
     <target name="jar">
