--- a/build.xml
+++ b/build.xml
@@ -7,12 +7,13 @@
     <target name="compile">
     	
     	<property name="src.dir" value="src"/>
+    	<property name="lib.dir" value="lib/jar/"/>
     	<property name="classes.dir" value="classes"/>
     	
     	<mkdir dir="${classes.dir}"/>
     	    <javac srcdir="${src.dir}" destdir="${classes.dir}">
     	        <classpath>
-    	               <fileset dir="${lib}">
+    	               <fileset dir="${lib.dir}">
     	                  <include name="**/*.jar" />
     	               </fileset>
     	         </classpath>
